IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpipe-vault
  name: xpipe-vault
  namespace: xpipe-dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: xpipe-vault
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpipe-vault
    spec:
      imagePullSecrets:
      - name: sindria-dockerhub
      containers:
      - env:
        - name: VAULT_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: VAULT_LOG_LEVEL
              name: xpipe-vault-config
        - name: VAULT_UI
          valueFrom:
            configMapKeyRef:
              key: VAULT_UI
              name: xpipe-vault-config
        - name: VAULT_ADDR
          valueFrom:
            configMapKeyRef:
              key: VAULT_ADDR
              name: xpipe-vault-config
        - name: VAULT_API_ADDRESS
          valueFrom:
            configMapKeyRef:
              key: VAULT_API_ADDRESS
              name: xpipe-vault-config
        - name: VAULT_DISABLE_MLOCK
          valueFrom:
            configMapKeyRef:
              key: VAULT_DISABLE_MLOCK
              name: xpipe-vault-config
        - name: VAULT_MYSQL_PLAINTEXT_CONNECTION_ALLOWED
          valueFrom:
            configMapKeyRef:
              key: VAULT_MYSQL_PLAINTEXT_CONNECTION_ALLOWED
              name: xpipe-vault-config
        - name: VAULT_TLS_DISABLE
          valueFrom:
            configMapKeyRef:
              key: VAULT_TLS_DISABLE
              name: xpipe-vault-config
        - name: VAULT_MYSQL_USERNAME
          valueFrom:
            secretKeyRef:
              key: VAULT_MYSQL_USERNAME
              name: xpipe-vault-secret
        - name: VAULT_MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: VAULT_MYSQL_PASSWORD
              name: xpipe-vault-secret
        - name: VAULT_MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: VAULT_MYSQL_DATABASE
              name: xpipe-vault-secret
        - name: VAULT_MYSQL_ADDRESS
          valueFrom:
            secretKeyRef:
              key: VAULT_MYSQL_ADDRESS
              name: xpipe-vault-secret
        image: sindriainc/vault:2.0.0-1.17.3
        imagePullPolicy: Always
        #command: [ "tail" ]
        #args: [ "-f", "/dev/null" ]
        #command: [ "vault" ]
        #args: [ "server", "-config", "/vault/config/config.hcl" ]
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        #lifecycle:
        #  postStart:
        #    exec:
        #      command: [ "/bin/sh", "-c", "/post_start.sh", "${VAULT_API_ADDRESS}" ]
        #      #command: [ "vault", "operator", "init", "-address=https://sindria-vault-xpipe.sindria.org", "-key-shares=5", "-key-threshold=2 > /vault/data/keys.txt" ]
        #      # vault operator init -address=https://sindria-vault-xpipe.sindria.org -key-shares=5 -key-threshold=2 > /vault/data/keys.txt
        #livenessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 50
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        name: xpipe-vault
        ports:
        - containerPort: 8200
          protocol: TCP
        - containerPort: 8201
          protocol: TCP
        #readinessProbe:
        #  failureThreshold: 3
        #  httpGet:
        #    path: /afc/channelactivity/actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 20
        #  periodSeconds: 10
        #  successThreshold: 1
        #  timeoutSeconds: 1
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 1024Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /vault/data
          name: xpipe-vault-data-volume
        #- mountPath: /vault/config/config.hcl
        #  name: xpipe-vault-config-volume
        #  subPath: config.hcl
      dnsPolicy: ClusterFirst
      #hostNetwork: true
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: xpipe-vault-data-volume
        persistentVolumeClaim:
          claimName: xpipe-vault-data-pvc
          #defaultMode: 420
      #- name: xpipe-vault-config-volume
      #  configMap:
      #    name: xpipe-vault-config
---
