IaC/xpipe-cloud/pipelines-v1-rst-configmapvault/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelines-v1-rst-configmapvault
  namespace: xpipe-cloud
  labels:
    app: pipelines-v1-rst-configmapvault
  #annotations:
  #  nginx.ingress.kubernetes.io/proxy-body-size: "8g"
  #  nginx.org/client-max-body-size: "8g"
  #  nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  rules:
  - host: configmap-vault-xpipe.sindria.org
    http:
      paths:
        -  path: /
           pathType: Prefix
           backend:
            service:
              name: pipelines-v1-rst-configmapvault
              port:
                number: 8200
  tls:
  - hosts:
    - configmap-vault-xpipe.sindria.org
    secretName: tls-sindriaorg
